--- a/index.html
+++ b/index.html
@@ -3,10 +3,65 @@
 <head lang="ru">
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style-adapt.css">
 </head>
 <body>
+    <div class="page">
+        <div class="col1">
+            <div class="col1 block">
 
-    <footer></footer>
+            </div>
 
+            <div class="col1 block">
+
+            </div>
+
+            <div class="col1 block">
+
+            </div>
+
+            <div class="col1 block">
+
+            </div>
+        </div>
+
+        <div class="col2">
+            <div class="col2 block">
+
+            </div>
+
+            <div class="col2 block">
+
+            </div>
+
+            <div class="col2 block">
+
+            </div>
+        </div>
+
+        <div class="col3">
+            <div class="col3 block">
+
+            </div>
+
+            <div class="col3 block">
+
+            </div>
+
+            <div class="col3 block">
+
+            </div>
+
+            <div class="col3 block">
+
+            </div>
+
+            <div class="col3 block">
+
+            </div>
+        </div>
+        <div class="clear"></div>
+    </div>
 </body>
 </html>
