--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head lang="ru">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/style-adapt.css">
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
+    <!--Давай не будем выносить адаптивку в отдельный файл. Запихнуть её в конец. Почему одни файл лучше, могу объяснить-->
 </head>
 <body>
-    <div class="page">
-        <div class="col1">
+    <div class="page"><!--Молодец. Запомнил. А помнишь для чего это нужно?-->
+        <div class="col1"><!-- У нас 3 колонки, которые ведут себя одинаково. Зачем давать им разные классы??-->
             <div class="col1 block">
 
             </div>
 
-            <div class="col1 block">
+            <div class="col1 block"><!--Мужик, это ОЧЕНЬ плохая идея-->
 
             </div>
 
