--- a/index.html
+++ b/index.html
@@ -8,56 +8,62 @@
 </head>
 <body>
     <div class="page"><!--Молодец. Запомнил. А помнишь для чего это нужно?-->
-        <div class="col1"><!-- У нас 3 колонки, которые ведут себя одинаково. Зачем давать им разные классы??-->
-            <div class="col1 block">
-
+        <div class="col"><!-- У нас 3 колонки, которые ведут себя одинаково. Зачем давать им разные классы??-->
+            <div class="block">
+                <p><img src="./img/metro1/about.png"></p>
+                <p class="text">About</p>
             </div>
 
-            <div class="col1 block"><!--Мужик, это ОЧЕНЬ плохая идея-->
-
+            <div class="block">
+                <p><img src="./img/metro1/team.png"></p>
+                <p class="text">Team</p>
             </div>
 
-            <div class="col1 block">
-
+            <div class="block">
+                <p><i>Any genuine teaching will result, if successfull, in knowing how to bring about a better condition of things than existed earlier.</i>
+                <sub><i>- John Dewey</i></sub>
+                </p>
             </div>
 
-            <div class="col1 block">
+            <div class="block">
+                <img src="./img/metro1/cassettiera.png">
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="block">
+                <p><img src="./img/metro1/contact_darkblue.png"></p>
+                <p class="text">Contact</p>
+            </div>
+
+            <div class="block">
+                <p><img src="./img/metro1/contact_lightblue.png"></p>
+                <p class="text">Contact</p>
+            </div>
+
+            <div class="block">
 
             </div>
         </div>
 
-        <div class="col2">
-            <div class="col2 block">
+        <div class="col">
+            <div class="block">
 
             </div>
 
-            <div class="col2 block">
+            <div class="block">
 
             </div>
 
-            <div class="col2 block">
-
-            </div>
-        </div>
-
-        <div class="col3">
-            <div class="col3 block">
+            <div class="block">
 
             </div>
 
-            <div class="col3 block">
+            <div class="block">
 
             </div>
 
-            <div class="col3 block">
-
-            </div>
-
-            <div class="col3 block">
-
-            </div>
-
-            <div class="col3 block">
+            <div class="block">
 
             </div>
         </div>
