Такой момент, первая колонка, блок team бекграунд становиться не того цвета.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="block">
-
+                <img src="./img/metro1/tea.png">
             </div>
         </div>
 
