Как ты и рекомендовал, создал отдельный класс для блоков которые идут на половну ширины колонки, не сработало.

--- a/index.html
+++ b/index.html
@@ -9,21 +9,19 @@
 <body>
     <div class="page"><!--Молодец. Запомнил. А помнишь для чего это нужно?-->
         <div class="col"><!-- У нас 3 колонки, которые ведут себя одинаково. Зачем давать им разные классы??-->
-            <div class="block">
+            <div class="block half">
                 <p><img src="./img/metro1/about.png"></p>
                 <p class="text">About</p>
             </div>
 
-
-
-            <div class="block">
+            <div class="block half">
                 <p><img src="./img/metro1/team.png"></p>
                 <p class="text">Team</p>
             </div>
 
             <div class="block">
-                <p><i>Any genuine teaching will result, if successfull, in knowing how to bring about a better condition of things than existed earlier.</i>
-                <sub><i>- John Dewey</i></sub>
+                <p class="quote">Any genuine teaching will result, if successfull, in knowing how to bring about a better condition of things than existed earlier.<br>
+                <sub>- John Dewey</sub>
                 </p>
             </div>
 
@@ -33,12 +31,12 @@
         </div>
 
         <div class="col">
-            <div class="block">
+            <div class="block half">
                 <p><img src="./img/metro1/contact_darkblue.png"></p>
                 <p class="text">Contact</p>
             </div>
 
-            <div class="block">
+            <div class="block half">
                 <p><img src="./img/metro1/contact_lightblue.png"></p>
                 <p class="text">Contact</p>
             </div>
