--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="page"><!--Молодец. Запомнил. А помнишь для чего это нужно?-->
-        <div class="col"><!-- У нас 3 колонки, которые ведут себя одинаково. Зачем давать им разные классы??-->
+        <div class="col">
             <div class="block half">
                 <p><img src="./img/metro1/about.png"></p>
                 <p class="text">About</p>
