Переделал структуру. Любуйся:)

--- a/index.html
+++ b/index.html
@@ -4,70 +4,77 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="./styles/style.css">
-    <!--Давай не будем выносить адаптивку в отдельный файл. Запихнуть её в конец. Почему одни файл лучше, могу объяснить-->
 </head>
 <body>
-    <div class="page"><!--Молодец. Запомнил. А помнишь для чего это нужно?-->
-        <div class="col"><!-- У нас 3 колонки, которые ведут себя одинаково. Зачем давать им разные классы??-->
-            <div class="block half">
-                <p><img src="./img/metro1/about.png"></p>
-                <p class="text">About</p>
+    <div class="page">
+        <div class="cols-holder">
+            <div class="col">
+                <div class="block half">
+                    <p><img class="image" src="./img/metro1/about.png"></p>
+                    <p class="text">About</p>
+                </div>
+
+                <div class="block half">
+                    <p><img class="image" src="./img/metro1/team.png"></p>
+                    <p class="text">Team</p>
+                </div>
+
+                <div class="block">
+                    <p class="quote">Any genuine teaching will result, if successfull, in knowing how to bring about a better condition of things than existed earlier.<br>
+                        <sub>- John Dewey</sub>
+                    </p>
+                </div>
+
+                <div class="block">
+                    <img class="image" src="./img/metro1/cassettiera.png">
+                </div>
+
+                <div class="clear"></div>
             </div>
 
-            <div class="block half">
-                <p><img src="./img/metro1/team.png"></p>
-                <p class="text">Team</p>
+            <div class="col">
+                <div class="block half">
+                    <p><img class="image" src="./img/metro1/contact_darkblue.png"></p>
+                    <p class="text">Contact</p>
+                </div>
+
+                <div class="block half">
+                    <p><img class="image" src="./img/metro1/contact_lightblue.png"></p>
+                    <p class="text">Contact</p>
+                </div>
+
+                <div class="block height66">
+                    <img class="image" src="./img/metro1/tea.png">
+                </div>
+
+                <div class="clear"></div>
             </div>
 
-            <div class="block">
-                <p class="quote">Any genuine teaching will result, if successfull, in knowing how to bring about a better condition of things than existed earlier.<br>
-                <sub>- John Dewey</sub>
-                </p>
+            <div class="col">
+                <div class="block">
+                </div>
+
+                <div class="block half">
+
+                </div>
+
+                <div class="block half">
+
+                </div>
+
+                <div class="block half">
+
+                </div>
+
+                <div class="block half">
+
+                </div>
+
+                <div class="clear"></div>
             </div>
 
-            <div class="block">
-                <img src="./img/metro1/cassettiera.png">
-            </div>
+            <div class="clear"></div>
         </div>
-
-        <div class="col">
-            <div class="block half">
-                <p><img src="./img/metro1/contact_darkblue.png"></p>
-                <p class="text">Contact</p>
-            </div>
-
-            <div class="block half">
-                <p><img src="./img/metro1/contact_lightblue.png"></p>
-                <p class="text">Contact</p>
-            </div>
-
-            <div class="block">
-                <img src="./img/metro1/tea.png">
-            </div>
-        </div>
-
-        <div class="col">
-            <div class="block">
-
-            </div>
-
-            <div class="block">
-
-            </div>
-
-            <div class="block">
-
-            </div>
-
-            <div class="block">
-
-            </div>
-
-            <div class="block">
-
-            </div>
-        </div>
-        <div class="clear"></div>
     </div>
 </body>
 </html>
