--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="./styles/style.css">
+    <link rel="stylesheet" type="text/css" href="./styles/metro1_style.css">
 </head>
 <body>
     <div class="page">
@@ -26,7 +27,7 @@
                 </div>
 
                 <div class="block">
-                    <img class="image" src="./img/metro1/cassettiera.png">
+                    <img class="image100" src="./img/metro1/cassettiera.png">
                 </div>
 
                 <div class="clear"></div>
@@ -44,7 +45,7 @@
                 </div>
 
                 <div class="block height66">
-                    <img class="image" src="./img/metro1/tea.png">
+                    <img class="image100" src="./img/metro1/tea.png">
                 </div>
 
                 <div class="clear"></div>
