Как ты и рекомендовал, создал отдельный класс для блоков которые идут на половну ширины колонки, не сработало.

--- a/metro2.html
+++ b/metro2.html
@@ -18,11 +18,11 @@
 
             </div>
 
-            <div class="block">
+            <div class="block half">
 
             </div>
 
-            <div class="block">
+            <div class="block half">
 
             </div>
 
@@ -30,153 +30,18 @@
         </div>
 
         <div class="col">
-            <div class="block">
-                <div class="page">
-                    <div class="cols-holder">
-                        <div class="col">
-                            <div class="block half">
-                                <p><img class="image" src="./img/metro1/about.png"></p>
-                                <p class="text">About</p>
-                            </div>
-
-                            <div class="block half">
-                                <p><img class="image" src="./img/metro1/team.png"></p>
-                                <p class="text">Team</p>
-                            </div>
-
-                            <div class="block">
-                                <p class="quote">Any genuine teaching will result, if successfull, in knowing how to bring about a better condition of things than existed earlier.<br>
-                                    <sub>- John Dewey</sub>
-                                </p>
-                            </div>
-
-                            <div class="block">
-                                <img class="image" src="./img/metro1/cassettiera.png">
-                            </div>
-
-                            <div class="clear"></div>
-                        </div>
-
-                        <div class="col">
-                            <div class="block half">
-                                <p><img class="image" src="./img/metro1/contact_darkblue.png"></p>
-                                <p class="text">Contact</p>
-                            </div>
-
-                            <div class="block half">
-                                <p><img class="image" src="./img/metro1/contact_lightblue.png"></p>
-                                <p class="text">Contact</p>
-                            </div>
-
-                            <div class="block height66">
-                                <img class="image" src="./img/metro1/tea.png">
-                            </div>
-
-                            <div class="clear"></div>
-                        </div>
-
-                        <div class="col">
-                            <div class="block">
-                            </div>
-
-                            <div class="block half">
-
-                            </div>
-
-                            <div class="block half">
-
-                            </div>
-
-                            <div class="block half">
-
-                            </div>
-
-                            <div class="block half">
-
-                            </div>
-
-                            <div class="clear"></div>
-                        </div>
-
-                        <div class="clear"></div>
-                    </div>
-                </div><div class="page">
-                <div class="cols-holder">
-                    <div class="col">
-                        <div class="block half">
-                            <p><img class="image" src="./img/metro1/about.png"></p>
-                            <p class="text">About</p>
-                        </div>
-
-                        <div class="block half">
-                            <p><img class="image" src="./img/metro1/team.png"></p>
-                            <p class="text">Team</p>
-                        </div>
-
-                        <div class="block">
-                            <p class="quote">Any genuine teaching will result, if successfull, in knowing how to bring about a better condition of things than existed earlier.<br>
-                                <sub>- John Dewey</sub>
-                            </p>
-                        </div>
-
-                        <div class="block">
-                            <img class="image" src="./img/metro1/cassettiera.png">
-                        </div>
-
-                        <div class="clear"></div>
-                    </div>
-
-                    <div class="col">
-                        <div class="block height66">
-
-                        </div>
-
-                        <div class="block half">
-
-                        </div>
-
-                        <div class="block half">
-
-                        </div>
-
-                        <div class="clear"></div>
-                    </div>
-
-                    <div class="col">
-                        <div class="block half">
-                        </div>
-
-                        <div class="block half">
-
-                        </div>
-
-                        <div class="block half">
-
-                        </div>
-
-                        <div class="block half">
-
-                        </div>
-
-                        <div class="block">
-
-                        </div>
-
-                        <div class="clear"></div>
-                    </div>
-
-                    <div class="clear"></div>
-                </div>
-            </div>
-            </div>
-
-            <div class="block half">
-                <p><img class="image" src="./img/metro1/contact_lightblue.png"></p>
-                <p class="text">Contact</p>
-            </div>
 
             <div class="block height66">
                 <img class="image" src="./img/metro1/tea.png">
+            </div>
+
+            <div class="block half">
+
+            </div>
+
+            <div class="block half">
+                <p><img class="icon" src="./img/metro1/contact_lightblue.png"></p>
+                <p class="text">Contact</p>
             </div>
 
             <div class="clear"></div>
