--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <div class="cols-holder">
             <div class="col">
                 <div class="block half">
-                    <p><img class="image" src="./img/metro1/about.png"></p>
+                    <p><img class="icon" src="./img/metro1/about.png"></p>
                     <p class="text">About</p>
                 </div>
 
                 <div class="block half">
-                    <p><img class="image" src="./img/metro1/team.png"></p>
+                    <p><img class="icon" src="./img/metro1/team.png"></p>
                     <p class="text">Team</p>
                 </div>
 
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="block">
-                    <img class="image100" src="./img/metro1/cassettiera.png">
+                    <img class="image" src="./img/metro1/cassettiera.png">
                 </div>
 
                 <div class="clear"></div>
@@ -35,17 +35,17 @@
 
             <div class="col">
                 <div class="block half">
-                    <p><img class="image" src="./img/metro1/contact_darkblue.png"></p>
+                    <p><img class="icon" src="./img/metro1/contact_darkblue.png"></p>
                     <p class="text">Contact</p>
                 </div>
 
                 <div class="block half">
-                    <p><img class="image" src="./img/metro1/contact_lightblue.png"></p>
+                    <p><img class="icon" src="./img/metro1/contact_lightblue.png"></p>
                     <p class="text">Contact</p>
                 </div>
 
                 <div class="block height66">
-                    <img class="image100" src="./img/metro1/tea.png">
+                    <img class="image" src="./img/metro1/tea.png">
                 </div>
 
                 <div class="clear"></div>
