Переделал картинки, подкорректировал 1 и 2 страницы. Посмотри, возможно. есть мелкие ляпы. Такой момент, сделать отступы между блоками, может стоить чуть-чуть уменьшит ширину в маленких блоках?.. Картинки сделал с jpeg картинок, вроде более-менее неплохо, но посмотри своим взглядом.

--- a/metro2.html
+++ b/metro2.html
@@ -15,15 +15,19 @@
             </div>
 
             <div class="block">
-
+                <p class="quote">Aliquam tincidunt pulvinar dui eu malesuada. Curabitur ut venenatis massa. Integer euismod semper nisi et mattis. Vestibulum necfermentum urna
+                    <sub>- Jack Twin</sub>
+                </p>
             </div>
 
             <div class="block half">
-
+                <p class="icon"><img src="img/metro2/contact.png"></p>
+                <p class="text">Contact</p>
             </div>
 
             <div class="block half">
-
+                <p class="icon"><img src="img/metro2/services.png"></p>
+                <p class="text">Services</p>
             </div>
 
             <div class="clear"></div>
@@ -32,39 +36,45 @@
         <div class="col">
 
             <div class="block height66">
-                <img class="image" src="./img/metro1/tea.png">
+                <img class="image" src="./img/metro2/disneyland.png">
             </div>
 
             <div class="block half">
-
+                <p class="icon"><img src="img/metro2/facebook_page.png"></p>
+                <p class="text">Facebook Page</p>
             </div>
 
             <div class="block half">
-                <p><img class="icon" src="./img/metro1/contact_lightblue.png"></p>
-                <p class="text">Contact</p>
+                <p class="icon"><img src="./img/metro2/twitter.png"></p>
+                <p class="text">Twitter Page</p>
             </div>
 
             <div class="clear"></div>
         </div>
 
         <div class="col">
+            <div class="block half">
+                <p class="icon"><img src="img/metro2/about.png"></p>
+                <p class="text">About</p>
+            </div>
+
+            <div class="block half">
+                <p class="icon"><img src="img/metro2/portfolio.png"></p>
+                <p class="text">Portfolio</p>
+            </div>
+
+            <div class="block half">
+                <p class="icon"><img src="img/metro2/team.png"></p>
+                <p class="text">Team</p>
+            </div>
+
+            <div class="block half">
+                <p class="icon"><img src="img/metro2/blog.png"></p>
+                <p class="text">Blog</p>
+            </div>
+
             <div class="block">
-            </div>
-
-            <div class="block half">
-
-            </div>
-
-            <div class="block half">
-
-            </div>
-
-            <div class="block half">
-
-            </div>
-
-            <div class="block half">
-
+                <img src="img/metro2/envato.png">
             </div>
 
             <div class="clear"></div>
