--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <div class="cols-holder">
             <div class="col">
                 <div class="block half">
-                    <p><img class="icon" src="./img/metro1/about.png"></p>
+                    <p class="icon"><img src="./img/metro1/about.png"></p>
                     <p class="text">About</p>
                 </div>
 
                 <div class="block half">
-                    <p><img class="icon" src="./img/metro1/team.png"></p>
+                    <p class="icon"><img src="./img/metro1/team.png"></p>
                     <p class="text">Team</p>
                 </div>
 
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="block">
-                    <img class="image" src="./img/metro1/cassettiera.png">
+                    <img class="image" src="./img/metro2/123.png">
                 </div>
 
                 <div class="clear"></div>
@@ -35,12 +35,12 @@
 
             <div class="col">
                 <div class="block half">
-                    <p><img class="icon" src="./img/metro1/contact_darkblue.png"></p>
+                    <p class="icon"><img src="./img/metro1/contact.png"></p>
                     <p class="text">Contact</p>
                 </div>
 
                 <div class="block half">
-                    <p><img class="icon" src="./img/metro1/contact_lightblue.png"></p>
+                    <p class="icon"><img src="./img/metro1/contact.png"></p>
                     <p class="text">Contact</p>
                 </div>
 
@@ -53,22 +53,28 @@
 
             <div class="col">
                 <div class="block">
+                    <p class="icon">@2logos For real!</p>
+                    <p class="text"><img src="img/metro1/bird.png"> Latest Tweets</p>
                 </div>
 
                 <div class="block half">
-
+                    <p class="icon"><img src="./img/metro1/portfolio.png"></p>
+                    <p class="text">Portfolio</p>
                 </div>
 
                 <div class="block half">
-
+                    <p class="icon"><img src="./img/metro1/contact.png"></p>
+                    <p class="text">Contact</p>
                 </div>
 
                 <div class="block half">
-
+                    <p class="icon"><img src="./img/metro1/blog.png"></p>
+                    <p class="text">Blog</p>
                 </div>
 
                 <div class="block half">
-
+                    <p class="icon"><img src="./img/metro1/shop.png"></p>
+                    <p class="text">Shop</p>
                 </div>
 
                 <div class="clear"></div>
