--- a/metro3.html
+++ b/metro3.html
@@ -5,6 +5,7 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="./styles/style.css">
     <link rel="stylesheet" type="text/css" href="./styles/metro2_style.css">
+    <link rel="stylesheet" type="text/css" href="./styles/metro3_style.css">
 </head>
 <body>
 <div class="page">
@@ -36,7 +37,7 @@
         <div class="col">
 
             <div class="block height66">
-                <img class="image" src="./img/metro2/disneyland.png">
+                <img class="image" src="./img/metro3/image.png">
             </div>
 
             <div class="block half">
@@ -74,16 +75,7 @@
             </div>
 
             <div class="block">
-                <p class="logo">
-                   <p class="icon_logo"><img src="img/metro2/envato.png"></p>
-                   <div class="name_company">
-                       <p class="slogan_info">Envato <span>2h</span></p>
-                       <p class="mail">@envato</p>
-                   </div>
-                   <p class="text_normal">Envato's Insider Information on the WordPress Economy</p>
-                   <p class="link"> <a href="index.html">buff.ly/1zFY7rq</a></p>
-                   <p class="text_think">Expand</p>
-                </p>
+                <img src="img/metro2/envato.png">
             </div>
 
             <div class="clear"></div>
