--- a/metro5.html
+++ b/metro5.html
@@ -11,65 +11,78 @@
     <div class="cols-holder">
         <div class="colon">
             <div class="block">
-
+                <p class="icon"><img src="img/metro5/buy_template.png"></p>
+                <p class="text">Buy Template</p>
             </div>
 
             <div class="block">
-
+                <p class="icon"><img src="img/metro5/about.png"></p>
+                <p class="text">About</p>
             </div>
 
             <div class="block">
-
+                <p class="icon"><img src="img/metro5/portfolio.png"></p>
+                <p class="text">Portfolio</p>
             </div>
 
             <div class="block">
-
+                <p class="icon"><img src="img/metro5/contact.png"></p>
+                <p class="text">Contact</p>
             </div>
 
             <div class="clear"></div>
         </div>
 
         <div class="colon-width">
-            <div class="block 1/3">
-
+            <div class="block one-of-third">
+                <p class="icon"><img src="img/metro5/features.png"></p>
+                <p class="text">Features</p>
             </div>
 
-            <div class="block 2/3">
-
+            <div class="block two-of-third">
+                <image class="image" src="img/metro5/desktop.png">
             </div>
 
-            <div class="block 1/3">
-
+            <div class="block one-of-third">
+                <p class="icon"><img src="img/metro5/our_service.png"></p>
+                <p class="text">Our Service</p>
             </div>
 
-            <div class="block 1/3">
-
+            <div class="block one-of-third">
+                <p class="icon"><img src="img/metro5/blog.png"></p>
+                <p class="text">Blog</p>
             </div>
 
-            <div class="block 2/3">
-
+            <div class="block two-of-third">
+                <image class="image" src="img/metro5/img1.png">
             </div>
 
-            <div class="block 2/3">
-
+            <div class="block two-of-third">
+                <h3>View More</h3>
+                <p class="text">Quality stuff from us</p>
+                <p class="footer"><img src="img/metro5/arrow.png"><span>2</span></p>
             </div>
         </div>
 
         <div class="colon">
             <div class="block">
-
+                <p class="icon"><img src="img/metro5/windows.png"></p>
+                <p class="text">Development</p>
             </div>
 
             <div class="block">
-
+                <p class="icon"><img src="img/metro5/photography.png"></p>
+                <p class="text">Photography</p>
             </div>
 
             <div class="block">
-
+                <p class="icon"><img src="img/metro5/design.png"></p>
+                <p class="text">Design</p>
             </div>
 
             <div class="block">
-
+                <p class="icon"><img src="img/metro5/motion.png"></p>
+                <p class="text">Motion Graphics</p>
             </div>
 
             <div class="clear"></div>
@@ -77,7 +90,7 @@
 
         <div class="colon">
             <div class="block">
-
+                <p class="height66"><img src="img/metro5/img_about.png"></p>
             </div>
 
             <div class="clear"></div>
