--- a/metro5.html
+++ b/metro5.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="block two-of-third">
-                <image class="image" src="img/metro5/img1.png">
+                <image class="image" src="img/metro5/img1.png" />
             </div>
 
             <div class="block two-of-third">
