--- a/metro3.html
+++ b/metro3.html
@@ -75,16 +75,16 @@
             </div>
 
             <div class="block">
-                <p class="logo">
-                <p class="icon_logo"><img src="img/metro2/envato.png"></p>
-                <div class="name_company">
-                    <p class="slogan_info">Envato <span>2h</span></p>
-                    <p class="mail">@envato</p>
+                <div class="logo">
+                    <p class="icon_logo"><img src="img/metro2/envato.png"></p>
+                    <div class="name_company">
+                        <p class="slogan_info">Envato <span>2h</span></p>
+                        <p class="mail">@envato</p>
+                    </div>
+                    <p class="text_normal">Envato's Insider Information on the WordPress Economy</p>
+                    <p class="link"> <a href="index.html">buff.ly/1zFY7rq</a></p>
+                    <p class="text_think">Expand</p>
                 </div>
-                <p class="text_normal">Envato's Insider Information on the WordPress Economy</p>
-                <p class="link"> <a href="index.html">buff.ly/1zFY7rq</a></p>
-                <p class="text_think">Expand</p>
-                </p>
             </div>
 
             <div class="clear"></div>
