--- a/metro2.html
+++ b/metro2.html
@@ -74,7 +74,7 @@
             </div>
 
             <div class="block">
-                <p class="logo">
+                <div class="logo">
                    <p class="icon_logo"><img src="img/metro2/envato.png"></p>
                    <div class="name_company">
                        <p class="slogan_info">Envato <span>2h</span></p>
@@ -83,7 +83,7 @@
                    <p class="text_normal">Envato's Insider Information on the WordPress Economy</p>
                    <p class="link"> <a href="index.html">buff.ly/1zFY7rq</a></p>
                    <p class="text_think">Expand</p>
-                </p>
+                </div>
             </div>
 
             <div class="clear"></div>
