Исправил на первой странице стили , изменил кое-какие классы.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
 
                 <div class="block half">
-                    <p class="icon"><img src="./img/metro1/team.png"></p>
+
                     <p class="text">Team</p>
                 </div>
 
@@ -35,12 +35,12 @@
 
             <div class="col">
                 <div class="block half">
-                    <p class="icon"><img src="./img/metro1/contact.png"></p>
+
                     <p class="text">Contact</p>
                 </div>
 
                 <div class="block half">
-                    <p class="icon"><img src="./img/metro1/contact.png"></p>
+
                     <p class="text">Contact</p>
                 </div>
 
@@ -53,27 +53,27 @@
 
             <div class="col">
                 <div class="block">
-                    <p class="icon">@2logos For real!</p>
-                    <p class="text"><img src="img/metro1/bird.png"> Latest Tweets</p>
+                    <p class="slogan">@2logos For real!</p>
+                    <p class="text1"><img src="img/metro1/bird.png"> Latest Tweets</p>
                 </div>
 
                 <div class="block half">
-                    <p class="icon"><img src="./img/metro1/portfolio.png"></p>
+
                     <p class="text">Portfolio</p>
                 </div>
 
                 <div class="block half">
-                    <p class="icon"><img src="./img/metro1/contact.png"></p>
+
                     <p class="text">Contact</p>
                 </div>
 
                 <div class="block half">
-                    <p class="icon"><img src="./img/metro1/blog.png"></p>
+
                     <p class="text">Blog</p>
                 </div>
 
                 <div class="block half">
-                    <p class="icon"><img src="./img/metro1/shop.png"></p>
+
                     <p class="text">Shop</p>
                 </div>
 
