На странице metro5 в третьей колонке, если картинки поставить бекграундом - не работает. В первой и второй колонках не корректно отображается. В принципе можно оставить как было, только разве что выставить для картинок другой класс, чтобы млегка поменять отступы. Для блоков третьей колонки, перебробывал несколько способов выставить границу, не отображается.

--- a/metro5.html
+++ b/metro5.html
@@ -11,7 +11,8 @@
     <div class="cols-holder">
         <div class="colon">
             <div class="block">
-                <p class="text">Buy Template</p>
+                <p class="icon"><img src="./img/metro5/buy_template.png"></p>
+                <p class="text3">Buy Template</p>
             </div>
 
             <div class="block">
@@ -52,26 +53,30 @@
 
             <div class="block two-of-third">
                 <h3>View More</h3>
-                <p class="text">Quality stuff from us</p>
+                <p class="text3">Quality stuff from us</p>
                 <p class="footer"><img src="img/metro5/arrow.png"><span>2</span></p>
             </div>
         </div>
 
         <div class="colon">
             <div class="block">
-                <p class="text">Development</p>
+                <p class="icon"><img src="./img/metro5/windows.png"></p>
+                <p class="text2">Development</p>
             </div>
 
             <div class="block">
-                <p class="text">Photography</p>
+                <p class="icon"><img src="./img/metro5/photography.png"></p>
+                <p class="text2">Photography</p>
             </div>
 
             <div class="block">
-                <p class="text">Design</p>
+                <p class="icon"><img src="./img/metro5/design.png"></p>
+                <p class="text2">Design</p>
             </div>
 
             <div class="block">
-                <p class="text">Motion Graphics</p>
+                <p class="icon"><img src="./img/metro5/motion.png"></p>
+                <p class="text2">Motion Graphics</p>
             </div>
 
             <div class="clear"></div>
