На странице metro5 в третьей колонке, если картинки поставить бекграундом - не работает. В первой и второй колонках не корректно отображается. В принципе можно оставить как было, только разве что выставить для картинок другой класс, чтобы млегка поменять отступы. Для блоков третьей колонки, перебробывал несколько способов выставить границу, не отображается.

--- a/metro5.html
+++ b/metro5.html
@@ -12,7 +12,7 @@
         <div class="colon">
             <div class="block">
                 <p class="icon"><img src="./img/metro5/buy_template.png"></p>
-                <p class="text3">Buy Template</p>
+                <p class="view_more">Buy Template</p>
             </div>
 
             <div class="block">
@@ -53,7 +53,7 @@
 
             <div class="block two-of-third">
                 <h3>View More</h3>
-                <p class="text3">Quality stuff from us</p>
+                <p class="view_more">Quality stuff from us</p>
                 <p class="footer"><img src="img/metro5/arrow.png"><span>2</span></p>
             </div>
         </div>
@@ -61,22 +61,22 @@
         <div class="colon">
             <div class="block">
                 <p class="icon"><img src="./img/metro5/windows.png"></p>
-                <p class="text2">Development</p>
+                <p class="text_block_invisible">Development</p>
             </div>
 
             <div class="block">
                 <p class="icon"><img src="./img/metro5/photography.png"></p>
-                <p class="text2">Photography</p>
+                <p class="text_block_invisible">Photography</p>
             </div>
 
             <div class="block">
                 <p class="icon"><img src="./img/metro5/design.png"></p>
-                <p class="text2">Design</p>
+                <p class="text_block_invisible">Design</p>
             </div>
 
             <div class="block">
                 <p class="icon"><img src="./img/metro5/motion.png"></p>
-                <p class="text2">Motion Graphics</p>
+                <p class="text_block_invisible">Motion Graphics</p>
             </div>
 
             <div class="clear"></div>
