Сделал отступы. Возможно такой метод не очень, но сработал нормально. Для адаптивки достаточно добавить в стилевом файле записи типа @media only screen and (min-width:1200px){ }, где указываем разрешение экрана, или надо дополнительно что-то прописать?

--- a/metro3.html
+++ b/metro3.html
@@ -21,11 +21,11 @@
             </div>
 
             <div class="block half">
-                <p class="text">Contact</p>
+                <p class="text_metro2">Contact</p>
             </div>
 
             <div class="block half">
-                <p class="text">Services</p>
+                <p class="text_metro2">Services</p>
             </div>
 
             <div class="clear"></div>
@@ -38,11 +38,11 @@
             </div>
 
             <div class="block half">
-                <p class="text">Facebook Page</p>
+                <p class="text_metro2">Facebook Page</p>
             </div>
 
             <div class="block half">
-                <p class="text">Twitter Page</p>
+                <p class="text_metro2">Twitter Page</p>
             </div>
 
             <div class="clear"></div>
@@ -50,19 +50,19 @@
 
         <div class="col">
             <div class="block half">
-                <p class="text">About</p>
+                <p class="text_metro2">About</p>
             </div>
 
             <div class="block half">
-                <p class="text">Portfolio</p>
+                <p class="text_metro2">Portfolio</p>
             </div>
 
             <div class="block half">
-                <p class="text">Team</p>
+                <p class="text_metro2">Team</p>
             </div>
 
             <div class="block half">
-                <p class="text">Blog</p>
+                <p class="text_metro2">Blog</p>
             </div>
 
             <div class="block">
