--- a/metro5.html
+++ b/metro5.html
@@ -59,22 +59,22 @@
         </div>
 
         <div class="colon">
-            <div class="block">
+            <div class="block border">
                 <p class="icon"><img src="./img/metro5/windows.png"></p>
                 <p class="text_block_invisible">Development</p>
             </div>
 
-            <div class="block">
+            <div class="block border">
                 <p class="icon"><img src="./img/metro5/photography.png"></p>
                 <p class="text_block_invisible">Photography</p>
             </div>
 
-            <div class="block">
+            <div class="block border">
                 <p class="icon"><img src="./img/metro5/design.png"></p>
                 <p class="text_block_invisible">Design</p>
             </div>
 
-            <div class="block">
+            <div class="block border">
                 <p class="icon"><img src="./img/metro5/motion.png"></p>
                 <p class="text_block_invisible">Motion Graphics</p>
             </div>
