--- a/metro2.html
+++ b/metro2.html
@@ -20,15 +20,17 @@
                 </p>
             </div>
 
-            <div class="block half">
-                <p class="text">Contact</p>
-            </div>
+           <!-- <div class="block">-->
+                <div class="block half">
+                    <p class="text_metro2">Contact</p>
+                </div>
 
-            <div class="block half">
-                <p class="text">Services</p>
-            </div>
+                <div class="block half">
+                    <p class="text_metro2">Services</p>
+                </div>
+            <!--</div>-->
 
-            <div class="clear"></div>
+            <div class="clear_metro2"></div>
         </div>
 
         <div class="col">
@@ -38,11 +40,11 @@
             </div>
 
             <div class="block half">
-                <p class="text">Facebook Page</p>
+                <p class="text_metro2">Facebook Page</p>
             </div>
 
             <div class="block half">
-                <p class="text">Twitter Page</p>
+                <p class="text_metro2">Twitter Page</p>
             </div>
 
             <div class="clear"></div>
@@ -50,19 +52,19 @@
 
         <div class="col">
             <div class="block half">
-                <p class="text">About</p>
+                <p class="text_metro2">About</p>
             </div>
 
             <div class="block half">
-                <p class="text">Portfolio</p>
+                <p class="text_metro2">Portfolio</p>
             </div>
 
             <div class="block half">
-                <p class="text">Team</p>
+                <p class="text_metro2">Team</p>
             </div>
 
             <div class="block half">
-                <p class="text">Blog</p>
+                <p class="text_metro2">Blog</p>
             </div>
 
             <div class="block">
