Metro5 сделал правки, правда есть еще моменты, над которыми над помозговать

--- a/metro5.html
+++ b/metro5.html
@@ -16,15 +16,18 @@
             </div>
 
             <div class="block">
-                <p class="text">About</p>
+                <p class="icon"><img src="./img/metro5/about.png"></p>
+                <p class="view_more">About</p>
             </div>
 
             <div class="block">
-                <p class="text">Portfolio</p>
+                <p class="icon"><img src="./img/metro5/portfolio.png"></p>
+                <p class="view_more">Portfolio</p>
             </div>
 
             <div class="block">
-                <p class="text">Contact</p>
+                <p class="icon"><img src="./img/metro5/contact.png"></p>
+                <p class="view_more">Contact</p>
             </div>
 
             <div class="clear"></div>
@@ -32,23 +35,26 @@
 
         <div class="colon-width">
             <div class="block one-of-third">
-                <p class="text">Features</p>
+                <p class="icon"><img src="./img/metro5/features.png"></p>
+                <p class="view_more">Features</p>
             </div>
 
             <div class="block two-of-third">
-                <image class="image" src="img/metro5/desktop.png">
+                <img class="image" src="img/metro5/desktop.png">
             </div>
 
             <div class="block one-of-third">
-                <p class="text">Our Service</p>
+                <p class="icon"><img src="./img/metro5/our_service.png"></p>
+                <p class="view_more">Our Service</p>
             </div>
 
             <div class="block one-of-third">
-                <p class="text">Blog</p>
+                <p class="icon"><img src="./img/metro5/blog.png"></p>
+                <p class="view_more">Blog</p>
             </div>
 
             <div class="block two-of-third">
-                <image class="image" src="img/metro5/img1.png" />
+                <img class="image" src="img/metro5/img1.png">
             </div>
 
             <div class="block two-of-third">
