Посмотри, для адаптивки, размеры экранов, дополнительно еще какие-нибудб указывать необходимо?

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 </head>
 <body>
     <div class="page">
+        <div class="header">
+            <div class="Logo_metro">
+                <p class="Logo_text">Flat Metro</p>
+            </div>
+
+            <div class="search">
+                <a href="#"><img src="img/metro1/string.png"></a>
+                <a href="#"><img src="img/metro1/search.png"></a>
+            </div>
+
+            <div class="clear"></div>
+        </div>
+
+
         <div class="cols-holder">
             <div class="col">
                 <div class="block half">
