--- a/metro3.html
+++ b/metro3.html
@@ -9,6 +9,19 @@
 </head>
 <body>
 <div class="page">
+    <div class="header">
+        <div class="Logo_metro">
+            <p class="Logo_text"><img src="img/metro3/face.png">Flat Metro</p>
+        </div>
+
+        <div class="search">
+            <a href="#"><img src="img/metro1/string.png"></a>
+            <a href="#"><img src="img/metro1/search.png"></a>
+        </div>
+
+        <div class="clear"></div>
+    </div>
+
     <div class="cols-holder">
         <div class="col">
             <div class="block">
