Глянь метро5 код пожалуйста

--- a/metro5.html
+++ b/metro5.html
@@ -9,6 +9,18 @@
 <body>
 <div class="page">
     <div class="cols-holder">
+        <!--<div class="text_heading"
+            <div class="welcome">
+                <p>Welcome</p>
+            </div>
+            <div class="service">
+                <p>Services</p>
+            </div>
+            <div class="about">
+                <p>About</p>
+            </div>
+        </div>-->
+
         <div class="colon">
             <div class="block">
                 <p class="icon"><img src="./img/metro5/buy_template.png"></p>
