--- a/metro5.html
+++ b/metro5.html
@@ -9,17 +9,19 @@
 <body>
 <div class="page">
     <div class="cols-holder">
-        <!--<div class="text_heading"
-            <div class="welcome">
-                <p>Welcome</p>
-            </div>
-            <div class="service">
-                <p>Services</p>
-            </div>
-            <div class="about">
-                <p>About</p>
-            </div>
-        </div>-->
+        <div class="text_heading">
+            <ul>
+                <li class="welcome">
+                    <p>Welcome</p>
+                </li>
+                <li class="service">
+                    <p>Services</p>
+                </li>
+                <li class="about">
+                    <p>About</p>
+                </li>
+            </ul>
+        </div>
 
         <div class="colon">
             <div class="block">
