На странице Метро1 сделал небольшой набросок в адаптивке, но там мне не все нравиться

--- a/metro5.html
+++ b/metro5.html
@@ -9,7 +9,7 @@
 <body>
 <div class="page">
     <div class="cols-holder">
-        <div class="text_heading">
+        <!--<div class="text_heading">
             <ul>
                 <li class="welcome">
                     <p>Welcome</p>
@@ -22,7 +22,7 @@
                 </li>
             </ul>
         </div>
-
+-->
         <div class="colon">
             <div class="block">
                 <p class="icon"><img src="./img/metro5/buy_template.png"></p>
