Страницы Метро1, Метро2 и Метро 3 - адаптивка. Возможно есть замечания.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="col">
                 <div class="block">
                     <p class="slogan">@2logos For real!</p>
-                    <p class="text1"><img src="img/metro1/bird.png"> Latest Tweets</p>
+                    <p class="text_tweets"><img src="img/metro1/bird.png"> Latest Tweets</p>
                 </div>
 
                 <div class="block half">
