Страницы Метро1, Метро2 и Метро 3 - адаптивка. Возможно есть замечания.

--- a/metro5.html
+++ b/metro5.html
@@ -3,43 +3,33 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="./styles/style.css">
+    <!--<link rel="stylesheet" type="text/css" href="./styles/style.css">-->
     <link rel="stylesheet" type="text/css" href="./styles/metro5_style.css">
 </head>
 <body>
 <div class="page">
     <div class="cols-holder">
-        <!--<div class="text_heading">
-            <ul>
-                <li class="welcome">
-                    <p>Welcome</p>
-                </li>
-                <li class="service">
-                    <p>Services</p>
-                </li>
-                <li class="about">
-                    <p>About</p>
-                </li>
-            </ul>
-        </div>
--->
         <div class="colon">
-            <div class="block">
+            <div class="block_name">
+                <p>Welcome</p>
+            </div>
+
+            <div class="block_metro5">
                 <p class="icon"><img src="./img/metro5/buy_template.png"></p>
                 <p class="view_more">Buy Template</p>
             </div>
 
-            <div class="block">
+            <div class="block_metro5">
                 <p class="icon"><img src="./img/metro5/about.png"></p>
                 <p class="view_more">About</p>
             </div>
 
-            <div class="block">
+            <div class="block_metro5">
                 <p class="icon"><img src="./img/metro5/portfolio.png"></p>
                 <p class="view_more">Portfolio</p>
             </div>
 
-            <div class="block">
+            <div class="block_metro5">
                 <p class="icon"><img src="./img/metro5/contact.png"></p>
                 <p class="view_more">Contact</p>
             </div>
@@ -48,30 +38,34 @@
         </div>
 
         <div class="colon-width">
-            <div class="block one-of-third">
+            <div class="block_name">
+                <p> </p>
+            </div>
+
+            <div class="block_metro5 one-of-third">
                 <p class="icon"><img src="./img/metro5/features.png"></p>
                 <p class="view_more">Features</p>
             </div>
 
-            <div class="block two-of-third">
+            <div class="block_metro5 two-of-third">
                 <img class="image" src="img/metro5/desktop.png">
             </div>
 
-            <div class="block one-of-third">
+            <div class="block_metro5 one-of-third">
                 <p class="icon"><img src="./img/metro5/our_service.png"></p>
                 <p class="view_more">Our Service</p>
             </div>
 
-            <div class="block one-of-third">
+            <div class="block_metro5 one-of-third">
                 <p class="icon"><img src="./img/metro5/blog.png"></p>
                 <p class="view_more">Blog</p>
             </div>
 
-            <div class="block two-of-third">
+            <div class="block_metro5 two-of-third">
                 <img class="image" src="img/metro5/img1.png">
             </div>
 
-            <div class="block two-of-third">
+            <div class="block_metro5 two-of-third">
                 <h3>View More</h3>
                 <p class="view_more">Quality stuff from us</p>
                 <p class="footer"><img src="img/metro5/arrow.png"><span>2</span></p>
@@ -79,22 +73,26 @@
         </div>
 
         <div class="colon">
-            <div class="block border">
+            <div class="block_name">
+                <p>Services</p>
+            </div>
+
+            <div class="block_metro5 border">
                 <p class="icon"><img src="./img/metro5/windows.png"></p>
                 <p class="text_block_invisible">Development</p>
             </div>
 
-            <div class="block border">
+            <div class="block_metro5 border">
                 <p class="icon"><img src="./img/metro5/photography.png"></p>
                 <p class="text_block_invisible">Photography</p>
             </div>
 
-            <div class="block border">
+            <div class="block_metro5 border">
                 <p class="icon"><img src="./img/metro5/design.png"></p>
                 <p class="text_block_invisible">Design</p>
             </div>
 
-            <div class="block border">
+            <div class="block_metro5 border">
                 <p class="icon"><img src="./img/metro5/motion.png"></p>
                 <p class="text_block_invisible">Motion Graphics</p>
             </div>
@@ -103,7 +101,11 @@
         </div>
 
         <div class="colon">
-            <div class="block">
+            <div class="block_name">
+                <p>About</p>
+            </div>
+
+            <div class="block_metro5">
                 <p class="height66"><img src="img/metro5/img_about.png"></p>
             </div>
 
